--- a/Week1/DataScienceBootcamp_Week1_Section1.ipynb
+++ b/Week1/DataScienceBootcamp_Week1_Section1.ipynb
@@ -6,7 +6,7 @@
     "id": "kk04ry-vQIjl"
    },
    "source": [
-    "## **Data Science Bootcamp, Spring' 23**\n",
+    "## **Data Science Bootcamp, Fall' 23**\n",
     "\n",
     "<br>\n",
     "\n",
